<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.amrudesh.treble.RootFragment">
<android.support.v4.widget.NestedScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cd1"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:elevation="100dp"
        app:cardCornerRadius="10dp">
      <ImageView
          android:id="@+id/root"
          android:layout_width="60dp"
          android:layout_height="60dp"
          android:layout_gravity="start"
          android:src="@drawable/ic_launcher"
          android:layout_marginLeft="5dp"
          android:layout_marginTop="17dp" />
      <TextView
          android:layout_gravity="center_vertical"
          android:layout_marginRight="13dp"
          android:layout_marginBottom="10dp"
          android:textSize="20sp"
          android:text="@string/Root"
          android:layout_marginLeft="78dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
      <TextView
          android:id="@+id/rt2"
          android:layout_gravity="center_vertical"
          android:layout_marginRight="13dp"
          android:layout_marginBottom="5dp"
          android:fontFamily="@font/font1"
          android:layout_marginTop="29dp"
          android:textSize="13sp"
          android:gravity="start"
          android:layout_marginLeft="78dp"
          android:layout_width="match_parent"
          android:layout_height="40dp" />

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_below="@id/cd1"
        android:layout_height="253dp"
        android:id="@+id/cd2"
        android:layout_margin="16dp"
        app:cardCornerRadius="10dp">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
      <ImageView
          android:layout_width="match_parent"
          android:layout_height="130dp"
          android:id="@+id/img1"
          android:scaleType="centerCrop"
          android:src="@drawable/what_root" />
      </LinearLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:layout_marginBottom="8dp"
            android:text="@string/card_title1"
            android:textColor="#000"
            android:textSize="18sp" />
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_content1"
            android:textColor="#555" />
      </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/cd3"
        android:layout_width="match_parent"
        android:layout_below="@id/cd2"
        android:layout_height="275dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
      <ImageView
          android:layout_width="match_parent"
          android:layout_height="130dp"
          android:id="@+id/img3"
          android:scaleType="centerCrop"
          android:src="@drawable/why_root" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="125dp"
          android:layout_marginBottom="8dp"
          android:text="@string/card_title2"
          android:textColor="#000"
          android:textSize="18sp" />
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/card_content2"
          android:textColor="#555" />
    </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_below="@id/cd2"
        android:layout_height="275dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="10dp">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:id="@+id/img4"
            android:scaleType="centerCrop"
            android:src="@drawable/why_root" />
      </LinearLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:layout_marginBottom="8dp"
            android:text="@string/card_title2"
            android:textColor="#000"
            android:textSize="18sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_content2"
            android:textColor="#555" />
      </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_below="@id/cd3"
        android:layout_height="280dp"
        android:id="@+id/cd4"
        android:layout_margin="16dp"
        app:cardCornerRadius="10dp">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:id="@+id/img"
            android:scaleType="fitCenter"
            android:background="@color/startblue"
            android:src="@drawable/how_root" />
      </LinearLayout>
      <RelativeLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:layout_marginBottom="8dp"
            android:text="@string/card_title3"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt1"
            android:text="@string/card_content3"
            android:textColor="#555" />

      </LinearLayout>
      </RelativeLayout>
    </android.support.v7.widget.CardView>
  </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
</FrameLayout>
