<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.amrudesh.treble.TrebleFragment">
<android.support.v4.widget.NestedScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="11" android:orientation="vertical">

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:id="@+id/tc1"
    android:layout_height="100dp"
    android:layout_weight="2"
    android:elevation="100dp"
    app:cardCornerRadius="8dp"
    android:layout_gravity="center"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="15dp">
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/cross"
        android:layout_gravity="left"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="17dp"/>
    <TextView
        android:layout_gravity="center_vertical"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"
        android:text="@string/treble"
        android:layout_marginLeft="78dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/sup"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/font1"
        android:layout_marginTop="17dp"
        android:textSize="15sp"
        android:text="@string/treble"
        android:layout_marginLeft="78dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_below="@+id/tc1"
            android:clickable="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:elevation="100dp"
            app:cardCornerRadius="9dp">

          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent">
              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="5dp"
                  android:id="@+id/txt1"
                  android:layout_marginBottom="8dp"
                  android:layout_marginLeft="10dp"
                  android:text="@string/project_treble"
                  android:textColor="@color/colorPrimary"
                  android:textSize="18sp" />
            <TextView
                android:layout_width="match_parent"
                android:id="@+id/txt2"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_below="@id/txt1"
                android:layout_marginRight="5dp"
                android:background="@drawable/ic_call_white_24dp"
                android:text="@string/what"
                android:textStyle="" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="203dp"
                android:id="@+id/img5"
                android:layout_marginBottom="150dp"
                android:layout_marginLeft="10dp"
                android:layout_below="@id/txt2"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:cropToPadding="true"
                android:scaleType="fitStart"
                android:src="@drawable/androi_before" />

              <TextView
                  android:id="@+id/txt4"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="380dp"
                  android:layout_marginLeft="10dp"
                  android:layout_marginRight="5dp"
                  android:text="@string/what2" />
              <ImageView
                  android:layout_width="wrap_content"
                  android:layout_height="203dp"
                  android:layout_marginTop="2dp"
                  android:layout_below="@id/txt4"
                  android:adjustViewBounds="true"
                  android:cropToPadding="true"
                  android:layout_gravity="center"
                  android:src="@drawable/project_treble" />

          </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
</FrameLayout>
