<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.amrudesh.treble.TrebleFragment">
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
  <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:weightSum="11"
      android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="2.7"
        android:elevation="100dp"
        android:id="@+id/scd1"
        app:cardCornerRadius="8dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp">

      <ImageView
          android:id="@+id/imageView2"
          android:layout_width="60dp"
          android:layout_height="60dp"
          android:layout_gravity="start"
          android:layout_marginLeft="5dp"
          android:layout_marginTop="17dp"
          android:src="@drawable/vec" />
      <TextView
          android:layout_gravity="center_vertical"
          android:layout_marginRight="13dp"
          android:gravity="fill"
          android:layout_marginBottom="22dp"
          android:textSize="15sp"
          android:text="@string/seamless1"
          android:layout_marginLeft="80dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
      <TextView
          android:id="@+id/sup2"
          android:layout_gravity="center_vertical"
          android:layout_marginRight="13dp"
          android:layout_marginBottom="10dp"
          android:fontFamily="@font/font1"
          android:layout_marginTop="27dp"
          android:textSize="13sp"
          android:gravity="start"
          android:layout_marginLeft="80dp"
          android:layout_width="match_parent"
          android:layout_height="60dp" />

    </android.support.v7.widget.CardView>

  <android.support.v7.widget.CardView
      android:layout_marginTop="8dp"
      app:cardCornerRadius="8dp"
      android:layout_below="@id/scd1"
      android:layout_gravity="center"
      android:layout_marginLeft="15dp"
      android:layout_marginRight="15dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">
      <TextView

          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:id="@+id/txt9"
          android:layout_marginBottom="8dp"
          android:layout_marginLeft="10dp"
          android:text="@string/seamless_updates"
          android:textColor="@color/colorPrimary"
          android:textSize="18sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/txt9"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/seamless_des" />
      </RelativeLayout>
  </android.support.v7.widget.CardView>
  </RelativeLayout>
  </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
</FrameLayout>
